# xrs

./: .gitignore  Cargo.toml  README.md
components/chars/: Cargo.toml
components/chars/src/: lib.rs
components/dom/: Cargo.toml
components/dom/dev/: gencharmap.py
components/dom/src/: chars.rs  dom.rs  error.rs  lib.rs  validate.rs
components/dom/src/chars/: char_maps.rs  mod.rs
components/dom/src/reader/: mod.rs  quick_xml.rs
components/dom/src/xpath/: mod.rs  selectors.rs  types.rs
components/dom/tests/: quick_xml.rs
components/dtd/: Cargo.toml
components/dtd/src/: lib.rs
components/parser/: Cargo.toml  build.rs  genshufmap.py  genshufmaps.sh  parseshufmap.py
components/parser/benches/: 4218078.gpx  Sample XHTML 1.0 document.xml  atom.xml  escapeing.rs  parser_benchmark.rs  parser_benchmark_ns.rs  whitespace_parser.rs
components/parser/src/: cow.rs  cursor.rs  dtd.rs  encoding.rs  lib.rs  reader.rs  shufti.rs
components/parser/src/namespace/: mod.rs  parser.rs  stack.rs
components/parser/src/parser/: core.rs  cursor.rs  helper.rs  mod.rs  string.rs
components/parser/src/reader/: buffer.rs  chars.rs  dtd.rs  mod.rs
components/parser/src/simple/: mod.rs  namespace.rs
components/parser/tests/: tester.rs  testsuite.rs  xmlts.rs  xmlts2.rs
components/parser/tests/processors/: full.rs  mod.rs  quick_xml.rs  simple.rs
components/parser/tests/suite/: test-suite.xml
components/serde/: Cargo.toml
components/serde/src/: error.rs  lib.rs
components/serde/src/de/: cow.rs  escape.rs  map.rs  mod.rs  seq.rs  var.rs
components/serde/src/ser/: attributes.rs  mod.rs  nonser.rs  var.rs
components/textsimd/benches/: whitespace_parser.rs
components/textsimd/src/: shufti.rs
components/writer/: Cargo.toml
components/writer/src/: escape.rs  lib.rs  write.rs
components/xmlrpc/: Cargo.toml
components/xmlrpc/src/: error.rs  lib.rs  ser.rs  value.rs  xmlrpc_server.py
components/xmlrpc/src/client/: mod.rs  reqwest.rs
components/xmlrpc/src/de/: cow.rs  error.rs  mod.rs
components/xmlrpc/tests/: pyserver.py  pyserver.rs
components/xpath/: Cargo.toml
components/xpath/src/: ast.rs  characters.rs  context.rs  datamodel.rs  dom.rs  functions.rs  lib.rs  object.rs  select.rs  selectors.rs  token.rs  tokenize.rs  types.rs  utils.rs
components/xpath/src/datamodel/: mod.rs  node.rs  parser.rs
components/xpath/src/functions/: boolean.rs  library.rs  mod.rs  string.rs
components/xpath/src/lex/: error.rs  lex_cursor.rs  lexer.rs  mod.rs  span.rs  token.rs  token_cursor.rs
components/xpath/src/parser/: expr.rs  mod.rs  parser.rs
components/xts/: Cargo.toml  build.rs  collecttests.py
components/xts/src/: lib.rs  main.rs
components/xts/tests/: quick_xml.rs
components/xts/xmlts20130923/xmlconf/: testcases.dtd  xmlconf.complete.xml
components/xts/xmlts20130923/xmlconf/eduni/errata-4e/: errata4e.xml
components/xts/xmlts20130923/xmlconf/eduni/xml-1.1/: testcases.dtd  xml11.xml
components/xts/xmlts20130923/xmlconf/ibm/: ibm_oasis_not-wf.xml
components/xts/xmlts20130923/xmlconf/japanese/: pr-xml-euc-jp.xml  pr-xml-iso-2022-jp.xml  pr-xml-little-endian.xml  pr-xml-shift_jis.xml  pr-xml-utf-16.xml  pr-xml-utf-8.xml
components/xts/xmlts20130923/xmlconf/xmltest/: xmltest.xml
src/: main.rs
