[package]
name = "xrs-dom"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "^0.22.0"
memchr = "^2.3.4"

[dev-dependencies]
xrs-xts = { path = "../xts" }