[package]
name = "xml-parser"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
description = "Fast and correct XML Parser of XML Toolkit"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-chars = { path = "../chars" }

[dev-dependencies]
xml-xts = { path = "../xts" }
