[package]
name = "xrs-parser"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
description = "Fast and correct XML Parser of XML Toolkit"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xrs-chars = { path = "../chars" }

[dev-dependencies]
xrs-xts = { path = "../xts" }
serde_json = "1"
criterion = "0.3"
quick-xml = "0.22.0"
xml-rs = "0.8.4"

[build-dependencies]
xrs-xts = { path = "../xts" }
serde_json = "1"

[[bench]]
name = "parser_benchmark_ns"
harness = false