[package]
name = "xrs-parser"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
description = "Fast and correct XML Parser of XML Toolkit"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["encoding"]
encoding = ["dep:encoding_rs"]

[dependencies]
xrs-chars = { path = "../chars" }
encoding_rs = { version = "^0.8.32", optional = true }

[dev-dependencies]
xrs-xts = { path = "../xts" }
serde_json = "1"
criterion = "0.3"
quick-xml = { version = "0.37.2", features = ["serialize"] }
xml-rs = "0.8.4"
serde = { version = "1.0.218", features = ["derive"] }

[build-dependencies]
xrs-xts = { path = "../xts" }
serde_json = "1"

[[bench]]
name = "escapeing"
harness = false

[[bench]]
name = "parser_benchmark"
harness = false

[[bench]]
name = "parser_benchmark_ns"
harness = false