[package]
name = "xrs-xmlrpc"
version = "0.1.0"
edition = "2021"

[features]
default = ["datetime", "base64", "reqwest"]
datetime = ["dep:time"]
base64 = ["dep:base64"]
reqwest = ["dep:reqwest", "dep:mime"]

[dependencies]
xrs-parser = { path = "../parser" }
xrs-chars = { path = "../chars" }
xrs-writer = { path = "../writer" }

serde = { version = "1", features = ["derive"] }
time = { version = "^0.3.11", default-features = false, features = ["std", "formatting", "parsing"], optional = true }
base64 = { version = "0.21.0", optional = true }
reqwest = { version = "^0.11", optional = true }
mime = { version = "^0.3", optional = true }
log = "^0.4"

[dev-dependencies]
serde-value = "0.7"
tokio = { version = "1", features = ["macros"] }