[package]
name = "xrs-xpath"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xrs-dom = { path = "../dom" }
xrs-chars = { path = "../chars" }
xrs-parser = { path = "../parser" }

[dev-dependencies]
assert_matches = "1.5"
