[package]
name = "xml-xts"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-explicit-xml = { git = "https://github.com/R1tschY/serde_xml_adapt.git", rev = "43be503a7de3"}
xml-dom = { path = "../dom" }