[package]
name = "xml-xts"
version = "0.1.0"
authors = ["Richard Liebscher <r1tschy@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
xserde = { git = "https://github.com/R1tschY/serde_xml_adapt.git", rev = "9caf74413926c21d31190462b4d74aeb28730a79"}
xml-dom = { path = "../dom" }

[dev-dependencies]
quick-xml = "0.22"